ステーキ画像と採用ページ追加

--- a/aprilfools2013/shared/css/extends.css
+++ b/aprilfools2013/shared/css/extends.css
@@ -149,8 +149,7 @@ h3 a {
 
 .top-main-copy-section {
     margin: 0;
-    padding: 70px 0 0 0;
-    background: url("/images/bg_fence.png") repeat 0 0;
+    padding: 0 0 50px 0;
     border-bottom: #333 1px solid;
 }
 
