--- a/aprilfools2013/shared/css/index.css
+++ b/aprilfools2013/shared/css/index.css
@@ -9,7 +9,7 @@
     font-size: 6px;
     color: #999999;
 }
-.product-list ul li {
+.event-list ul li {
     list-style-type: none;
     margin-bottom: 10px;
 }
